<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">聚信达OA</string>
    <string name="txt_confirm">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_error">错误</string>
    <string name="txt_tips">提示</string>
    <string name="txt_clear_data">清空数据</string>
    <string name="txt_exit">退   出</string>
    <string name="action_settings">设置</string>
    <string name="txt_auto_login">自动登录</string>
    <string name="txt_msg">短消息</string>
    <string name="txt_email">邮件</string>
    <string name="txt_notice">通知公告</string>
    <string name="txt_schedule">今日日程</string>
    <string name="txt_my_task">我的任务</string>
    <string name="txt_is_start">正在启动</string>
    <string name="txt_is_exit">正在退出</string>
    <string name="txt_title_address">考勤地址采集</string>
    <string name="txt_waiting_sync">等待同步</string>
    <string name="txt_action_sync">同步数据</string>
    <string name="txt_action_read">全部已读</string>
    <string name="txt_action_add">增加</string>
    <string name="txt_label_title">主题</string>
    <string name="txt_action_save">保存</string>
    <string name="txt_label_recipient">接收人</string>
    <string name="txt_label_content">内容</string>
    <string name="txt_title_email_add">发送邮件</string>
    <string name="txt_contacts">通讯录</string>
    <string name="txt_cloud">企业云</string>
    <string name="txt_label_important">重要性</string>
    <string name="txt_label_attachment">附件</string>
    <string name="txt_choice_file">选择文件</string>
    <string name="txt_has_download">已下载</string>
    <string name="txt_download">下载</string>
    <string name="txt_copyright">武汉聚信达科技有限公司</string>
    <string name="txt_call_phone">打电话</string>
    <string name="txt_send_msg">发短信</string>
    <string name="txt_label_name">姓名</string>
    <string name="txt_label_ministration">职务</string>
    <string name="txt_label_company">公司</string>
    <string name="txt_label_company_addr">公司地址</string>
    <string name="txt_label_sex">性别</string>
    <string name="txt_label_mobile">手机</string>
    <string name="txt_label_phone">电话</string>
    <string name="txt_label_category">分类</string>
    <string name="txt_is_upload_data">正在上传数据。。。</string>
    <string name="txt_title_email_recipient">接收人查看详情</string>
    <string name="txt_yes">是</string>
    <string name="txt_no">否</string>
    <string name="txt_action_copy">抄送</string>
    <string name="txt_sign_title">考勤签到</string>
    <string name="txt_action_edit">修改</string>
    <string name="txt_contacts_delete">删除联系人</string>
    <string name="txt_action_date">回到今天</string>
    <string name="txt_title_schedule_add">增加日程</string>
    <string name="txt_label_start_date">开始时间</string>
    <string name="txt_label_end_date">结束时间</string>
    <string name="txt_title_schedule_detail">日程详情</string>
    <string name="txt_title_sign_address">考勤签到位置</string>
    <string name="txt_label_address">地点</string>
    <string name="txt_title_my_task_detail">我的工作详情</string>
    <string name="txt_message_center">消息中心</string>
    <string name="txt_work">工作信息</string>
    <string name="txt_work_tips">待办中心、今日日程、我的工作、请假单、报销单</string>
    <string name="txt_operation_remind">操作提醒</string>
    <string name="txt_operation_remind_tips">考勤位置采集</string>
    <string name="txt_tips_title">提示信息</string>
    <string name="txt_tips_sub_title">邮件、通知公告、工资查看、文档中心</string>
    <string name="txt_message_center_base">基本信息</string>
    <string name="txt_message_center_base_sub">用户、部门、角色</string>
    <string name="txt_label_principal">负责人</string>
    <string name="txt_label_participant">参与人</string>
    <string name="txt_title_salary">我的工资</string>
    <string name="txt_title_leave_application">请假单</string>
    <string name="txt_title_expense_account">报销单</string>
    <string name="txt_title_todo_center">待办中心</string>
    <string name="txt_action_delete">全部清空</string>
    <string name="txt_title_salary_detail">工资详情</string>
    <string name="txt_label_payable_total">应发合计</string>
    <string name="txt_label_pay_salary">薪级工资</string>
    <string name="txt_label_merit_salary">绩效工资</string>
    <string name="txt_label_transitivity_subsidy">过渡性补贴</string>
    <string name="txt_label_post_allowance">岗位津贴</string>
    <string name="txt_label_deduct_total">扣款合计</string>
    <string name="txt_label_employee_benefit">员工福利</string>
    <string name="txt_label_overtime_fee">加班费</string>
    <string name="txt_label_medicine_fee">特保药费</string>
    <string name="txt_label_premium">特保费</string>
    <string name="txt_label_telephone_fee">电话费</string>
    <string name="txt_label_health_fee">保键费</string>
    <string name="txt_label_life_allowance">生活补贴</string>
    <string name="txt_label_service_fee">劳务费</string>
    <string name="txt_label_other_fee">其它费用</string>
    <string name="txt_label_leave_deduction">病事假扣款</string>
    <string name="txt_label_rent">房租</string>
    <string name="txt_label_pension_insurance">养老保险</string>
    <string name="txt_label_medical_insurance">医疗保险</string>
    <string name="txt_label_birth_insurance">生育保险</string>
    <string name="txt_label_unemployment_insurance">失业保险</string>
    <string name="txt_label_work_insurance">工伤保险</string>
    <string name="txt_label_housing_fund">住房公积金</string>
    <string name="txt_label_withhold_tax">代扣税</string>
    <string name="txt_label_other_deductions">其它扣税</string>
    <string name="txt_label_leave_reason">请假事由</string>
    <string name="txt_label_type">类型</string>
    <string name="txt_label_audit_user">审批人</string>
    <string name="txt_label_apply_user">申请人</string>
    <string name="txt_title_leave_application_add">请假单申请</string>
    <string name="txt_title_leave_application_detail">请假单详情</string>
    <string name="txt_title_leave_application_audit">请假单审核</string>
    <string name="txt_label_audit_status">审批状态</string>
    <string name="txt_label_audit_remark">审批备注</string>
    <string name="txt_label_item_name">报销项目</string>
    <string name="txt_label_apply_date">报销日期</string>
    <string name="txt_label_money">报销金额</string>
    <string name="txt_label_remark">备注</string>
    <string name="txt_title_expense_account_detail">报销单详情</string>
    <string name="txt_title_expense_account_add">报销单申请</string>
    <string name="txt_title_expense_account_audit">报销单审核</string>
</resources>
